--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
 plugins {
+	id 'java-gradle-plugin'
 	id 'groovy'
 }
 
-dependencies {
-	implementation gradleApi()
-	implementation localGroovy()
+gradlePlugin {
+	plugins {
+		simplePlugin {
+			id = 'de.clashsoft.simple-publish'
+			implementationClass = 'de.clashsoft.simplepublish.SimplePublishPlugin'
+		}
+	}
 }
