--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,12 @@ gradlePlugin {
 		}
 	}
 }
+
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+	// https://mvnrepository.com/artifact/junit/junit
+	testCompile group: 'junit', name: 'junit', version: '4.12'
+}
