--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,14 @@ gradlePlugin {
 }
 
 repositories {
-	mavenCentral()
+	jcenter()
 }
 
 dependencies {
 	// https://mvnrepository.com/artifact/junit/junit
 	testCompile group: 'junit', name: 'junit', version: '4.12'
+
+	testCompile(group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4') {
+		exclude group: 'org.codehaus.groovy'
+	}
 }
