--- a/gradle/functional-test.gradle
+++ b/gradle/functional-test.gradle
@@ -10,15 +10,15 @@ sourceSets {
 	}
 }
 
-task functionalTest(type: Test) {
+tasks.register('functionalTest', Test) {
 	description = 'Runs the functional tests.'
 	group = 'verification'
 	testClassesDirs = sourceSets.functionalTest.output.classesDirs
 	classpath = sourceSets.functionalTest.runtimeClasspath
-	mustRunAfter test, integrationTest
+	mustRunAfter 'test', 'integrationTest'
 }
 
-check.dependsOn functionalTest
+check.dependsOn 'functionalTest'
 
 gradlePlugin {
 	testSourceSets sourceSets.functionalTest
