Git-tags-based version number

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
 	id 'com.gradle.plugin-publish' version '0.10.1'
 }
 
-group 'de.clashsoft'
-version '0.4.0'
-description 'A Gradle plugin that simplifies publishing to Maven and Bintray.'
+group = 'de.clashsoft'
+version = 'git describe --tags'.execute().text[1..-2] // strip v and \n
+description = 'A Gradle plugin that simplifies publishing to Maven and Bintray.'
 
 pluginBundle {
 	website = 'https://github.com/Clashsoft/Simple-Publish'
